[project]
name = "nnt"
description = "Neural Network Toolkit (NNT) for ComfyUI is an extensive set of custom ComfyUI nodes for designing, training, and fine-tuning neural networks. This toolkit allows defining models, layers, training workflows, transformers, and tensor operations in a visual manner using nodes."
version = "1.0.3"
license = {file = "LICENSE"}
dependencies = ["# Core dependencies", "torch>=2.0.0", "numpy>=1.21.0", "pandas>=1.3.0", "matplotlib>=3.4.0", "scikit-learn>=1.0.0", "# Deep Learning and Model Tools", "transformers>=4.30.0", "datasets>=2.12.0", "onnx>=1.14.0", "safetensors>=0.3.1", "torchvision>=0.15.0", "# Time Series Analysis", "statsmodels>=0.13.0", "scipy>=1.7.0", "# Visualization", "seaborn>=0.11.0", "graphviz>=0.20.0", "torchview>=0.2.0", "# Audio Processing (optional)", "librosa>=0.10.0", "# Image Processing", "Pillow>=9.0.0", "# Machine Learning Interpretability", "shap>=0.41.0", "# Model saving and loading", "joblib>=1.1.0", "h5py>=3.7.0", "# HuggingFace Hub", "huggingface-hub>=0.16.0"]

[project.urls]
Repository = "https://github.com/inventorado/ComfyUI_NNT"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "inventorado"
DisplayName = "ComfyUI Neural Network Toolkit NNT "
Icon = ""
